--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "shortid": "^2.2.15"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
